@@ -19,8 +19,8 @@ OCaml and all the important tools.
 </p>
 <p>
 This tutorial is meant for users of Linux, MacOS X, BSD and other
-variants of Unix. As of this writing, there is no robust manner of
-installing OCaml and all its tools under Windows.
+variants of Unix. It could also be completed to work for Windows, 
+but that's a new story altogether.
 </p>
 <center><h2>Necessary tools</h2></center>
 <center><h3>Under Linux/BSD</h3></center>
