@@ -199,49 +199,49 @@ module Safe_int :
     type t = int
 	(** An alias for the type of integers. *)
 
-    val zero : int
+    val zero : t
       (** The integer [0]. *)
       
-    val one : int
+    val one : t
       (** The integer [1]. *)
 
-    val minus_one : int
+    val minus_one : t
       (** The integer [-1]. *)
 
-    val neg : int -> int
+    val neg : t -> t
       (** Unary negation. *)
 
-    val add : int -> int -> int
+    val add : t -> t -> t
       (** Addition. *)
-    val ( + ) : int -> int -> int
+    val ( + ) : t -> t -> t
       (** Addition. *)
 
-    val sub : int -> int -> int
+    val sub : t -> t -> t
       (** Subtraction. *)
-    val ( - ) : int -> int -> int
+    val ( - ) : t -> t -> t
       (** Subtraction. *)
 
-    val mul : int -> int -> int
+    val mul : t -> t -> t
       (** Multiplication. *)
-    val ( * ) : int -> int -> int
+    val ( * ) : t -> t -> t
       (** Multiplication. *)
 
-    external div : int -> int -> int = "%divint"
+    external div : t -> t -> t = "%divint"
       (** Integer division.  Raise [Division_by_zero] if the second
 	  argument is zero.  This division rounds the real quotient of
 	  its arguments towards zero, as specified for {!Pervasives.(/)}. *)
-    external ( / ) : int -> int -> int = "%divint"
+    external ( / ) : t -> t -> t = "%divint"
       (** Integer division.  Raise [Division_by_zero] if the second
 	  argument is zero.  This division rounds the real quotient of
 	  its arguments towards zero, as specified for {!Pervasives.(/)}. *)
       
-    external rem : int -> int -> int = "%modint"
+    external rem : t -> t -> t = "%modint"
       (** Integer remainder.  If [y] is not zero, the result
 	  of [Int.rem x y] satisfies the following property:
 	  [x = Int.add (Int.mul (Int.div x y) y) (Int.rem x y)].
 	  If [y = 0], [Int.rem x y] raises [Division_by_zero]. *)
       
-    external modulo : int -> int -> int = "%modint"
+    external modulo : t -> t -> t = "%modint"
       (** [modulo a b] computes the remainder of the integer
 	  division of [a] by [b]. This is defined only if [b <> 0].
 
@@ -251,43 +251,43 @@ module Safe_int :
 	  for some [k]. *)
 
 
-    val pow  : int -> int -> int
+    val pow  : t -> t -> t
       (** [pow a b] computes a{^b}*)
-    val ( ** ) : int -> int -> int
+    val ( ** ) : t -> t -> t
       (** [a ** b] computes a{^b}*)
 
-    val ( <> ) : int -> int -> bool
-    val ( > )  : int -> int -> bool
-    val ( < )  : int -> int -> bool
-    val ( >= ) : int -> int -> bool
-    val ( <= ) : int -> int -> bool
-    val ( = )  : int -> int -> bool
+    val ( <> ) : t -> t -> bool
+    val ( > )  : t -> t -> bool
+    val ( < )  : t -> t -> bool
+    val ( >= ) : t -> t -> bool
+    val ( <= ) : t -> t -> bool
+    val ( = )  : t -> t -> bool
 
-    val min_num : int
+    val min_num : t
       (** The greatest representable integer, which is either 2{^30}-1 or 2{^62}-1. *)
 
-    val max_num : int
+    val max_num : t
       (** The smallest representable integer, -2{^30} or 2{^62}. *)
 
-    val succ: int -> int
-      (** Successor.  [Int.succ x] is [Int.add x Int.one]. *)
+    val succ: t -> t
+      (** Successor.  [succ x] is [add x one]. *)
       
-    val pred: int -> int
-      (** Predecessor.  [Int.pred x] is [Int.sub x Int.one]. *)
+    val pred: t -> t
+      (** Predecessor.  [pred x] is [sub x one]. *)
       
-    val abs : int -> int
+    val abs : t -> t
       (** Return the absolute value of its argument. *)
       
-    external of_float : float -> int = "%intoffloat"
+    external of_float : float -> t = "%intoffloat"
       (** Convert the given floating-point number to integer integer,
 	  discarding the fractional part (truncate towards 0).
 	  The result of the conversion is undefined if, after truncation,
 	  the number is outside the range \[{!Int.min_int}, {!Int.max_int}\]. *)
 
-    external to_float : int -> float = "%floatofint"
+    external to_float : t -> float = "%floatofint"
       (** Convert the given integer to a floating-point number. *)
       
-    val of_string : string -> int
+    val of_string : string -> t
       (** Convert the given string to an integer
 	  The string is read in decimal (by default) or in hexadecimal,
 	  octal or binary if the string begins with [0x], [0o] or [0b]
@@ -296,7 +296,7 @@ module Safe_int :
 	  a valid representation of an integer, or if the integer represented
 	  exceeds the range of integers representable in type [int]. *)
       
-    val to_string : int -> string
+    val to_string : t -> string
       (** Return the string representation of its argument, in signed decimal. *)
       
 	
@@ -306,10 +306,10 @@ module Safe_int :
 	  allows the module [Int] to be passed as argument to the functors
 	  {!Set.Make} and {!Map.Make}. *)
       
-    val operations : int Number.numeric
+    val operations : t Number.numeric
 
-    external of_int : int -> int = "%identity"
-    external to_int : int -> int = "%identity"
+    external of_int : int -> t = "%identity"
+    external to_int : t -> int = "%identity"
 
     (** {6 Boilerplate code}*)
     (** {7 S-Expressions}*)
